trunk/Archive2/4c/836cbe2befa869/output
main.cpp:20:12: error: 'std::string hiall::gethello()' cannot be overloaded
     string gethello() {
            ^
main.cpp:10:12: error: with 'std::string hiall::gethello()'
     string gethello();
            ^
